Correction du footer. Les éléments rentrent parfaitement dans le footer en version mobile.

--- a/TPF-WEB/src/styles/base/global.css
+++ b/TPF-WEB/src/styles/base/global.css
@@ -25,6 +25,6 @@ label {
 
 @media screen and (width <= 1000px){
   label {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
 }
